# my-personal-note

./: .gitignore  README.md  Resume.md  StartWindows.json  StartWindows.ps1  daily_backup.ps1  daily_restore.ps1  install-config.bat  install-config.sh
angular/: Angular学习.md  RxJS学习.md
database/: PostgreSQL学习.md  my.cnf  mysql学习.md  plpgsql学习.md  redis学习.md  sample.ddl.sql  sample.dml.sql  数据一致性.md  数据库事物.md
gentoo/: Gentoo安装.md
go/: Go学习.md
java/: HttpClient.md  JDBC.md  JVM学习.md  cron表达式.md  jaxp.md  jigsaw.md  log4j2.xml  zookeeper.md  常用依赖.md  数据库事物.md
javascript/: javascript学习.md
kubernates/: docker-compose.yml  docker学习.md  kubernetes学习.md  mysql.yml  nginx.yaml  nginx.yml  redis.yml  zookeeper.yml
linux/: Linux基本配置.md  Linux基本配置文件配置.md  Manjaro安装.md  Netfilter学习.md  WSL配置.md  bash语法.md  config  cron表达式.md  desktop-entity.md  iproute2.md  run.sh  systemd学习.md  内核命令.md  内核相关命令.md  常用脚本.md  常用脚本命令.md  常见环境变量.md  常见配置文件格式.md  文件操作.md  文本文件操作.md  用户管理.md  硬件管理.md  系统管理命令.md  网卡配置.md  网络管理.md  计算机管理.md  远程命令.md  防火墙.md  防火墙管理命令.md
messagequeue/: Kafka学习.md
node/: NodeJs学习.md
nodejs/: Angular学习.md  nodejs常用包.md  npm常用包.md
other/: Android学习.md  typescript学习.md
python/: Python学习.md  Python常用包.md  python技巧.txt  requests学习.md  一些常用标准库学习.md  内置函数学习.md  数据库操作.md  类学习.md
rust/: Iterator学习.md  Rust学习.md  Trait学习.md  并发学习.md
starter/: Gentoo安装.md  base.vim  coc-settings.json  library.sh  myplugin.vim  plugin.vim  quick-link.sh  run.sh  starter-ui.sh  starter.sh  tmux.conf  vim-base.vim  (+3 more)
utils/cmake/: CMakeLists.txt  cmake-format.yaml  cmake命令说明.zsh
(+663 files in other folders)
